log
Thu Apr 21 11:24:16 HSP 2022: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:43: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         if(nodo->pair->key == key) return nodo;
                                           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c9b388d
Thu Apr 21 11:24:46 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54de85a
Thu Apr 21 11:28:09 HSP 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
f8e9d2b
Thu Apr 21 11:28:28 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2dd715b
Thu Apr 21 11:29:40 HSP 2022: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|8
total_score: 0/70
1079085
Thu Apr 21 11:30:51 HSP 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|8
total_score: 0/70
21e69e5
Thu Apr 21 11:33:11 HSP 2022: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  9|7
total_score: 10/70
de19faa
Thu Apr 21 11:34:46 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
81190ef
